syntax = "proto3";

package NUgc.NSchema;

import "google/protobuf/timestamp.proto";

message TFavoriteImage {
    string Id = 1;  // collections card_id
    string DocId = 2;
    string AvatarsKey = 3;  // `$group-id/$imagename`; namespace=pdb
    google.protobuf.Timestamp Time = 4;
    string ImageUrl = 5;
    string ParentId = 6; // source card id
}
